typed correct code

--- a/selection-eghbali/selectors.html
+++ b/selection-eghbali/selectors.html
@@ -2,77 +2,31 @@
 <html lang='en'>
   <head>
     <meta charset='UTF-8'/>
-    <title>Boxes are Easy!</title>
+    <title>CSS Selectors</title>
     <link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-    <section>
-      <h2>setup</h2>
-
-        <h1>Headings are Block Elements</h1>
-
-        <p>Paragraphs are blocks, too. <em>However</em>, &lt;em&gt; and &lt;strong&gt;
-        elements are not. They are <strong>inline</strong> elements.</p>
-
-        <div style='padding-top: 1px'></div> <!-- Add this -->
-
-        <p>Block elements define the flow of the HTML document, while inline elements
-        do not.</p>
-    </section>
+    <div class='page'> <!-- Add this -->
+    <h1>CSS Selectors</h1>
 
     <section>
-      <h2>block elements and inline elements</h2>
+      <h2>class selectors</h2>
+      <p class='synopsis'>CSS selectors let you <em>select</em> individual HTML
+      elements in an HTML document. This is <strong>super</strong> useful.</p>
     </section>
+
+    <p>Classes are ridiculously important, since they allow you to select
+      arbitrary boxes in your web pages.</p>
+
+    <p>We’ll also be talking about links in this example, so here’s
+        <a href='https://internetingishard.com'>Interneting Is Hard</a> for us to
+        style.</p>
 
     <section>
-      <h2>changing box behavior</h2>
+      <h2>more useful divs</h2>
+      <a class='button' href='nowhere.html'>Button One</a>
+      <a id='button 2' class='button' href='nowhere.html'>Button Two</a>
     </section>
-
-    <section>
-      <h2>content, padding, border, and margin</h2>
-    </section>
-
-    <section>
-      <h2>padding</h2>
-    </section>
-
-    <section>
-      <h2>borders</h2>
-    </section>
-
-    <section>
-      <h2>margins</h2>
-    </section>
-
-    <section>
-      <h2>vertical margin collapse</h2>
-    </section>
-
-    <section>
-      <h2>generic boxes</h2>
-    </section>
-
-    <section>
-      <h2>explicit dimensions</h2>
-    </section>
-
-    <section>
-      <h2>content boxes and border boxes</h2>
-    </section>
-
-    <section>
-      <h2>aligning boxes</h2>
-    </section>
-
-    <section>
-      <h2>resetting styles</h2>
-    </section>
-
-    <section>
-      <h2>summary</h2>
-    </section>
-
-    <div>Button</div>
 
   </body>
 </html>
